rework Histogram to construct nodes using math not fidgeting